arm64: dts: qcom: msm8939-alcatel-idol3: Fix sound
Signed-off-by: Vincent Knecht <vincent.knecht@mailoo.org>

--- a/arch/arm64/boot/dts/qcom/msm8939-alcatel-idol3.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-alcatel-idol3.dts
@@ -448,7 +448,7 @@
 &sound {
 	status = "okay";
 
-	qcom,model = "alcatel-idol3";
+	model = "alcatel-idol3";
 	widgets = "Speaker", "Speaker Top", "Speaker", "Speaker Bottom";
 	pin-switches = "Speaker Top", "Speaker Bottom";
 	audio-routing =
