--- a/arch/arm64/boot/dts/qcom/msm8939-huawei-kiwi.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-huawei-kiwi.dts
@@ -258,7 +258,7 @@
 
 &dsi0 {
 	panel@0 {
-		compatible = "cmi,nt35532-5p5xa";
+		compatible = "auo,otm1901a-5p5xa";
 		reg = <0>;
 
 		reset-gpios = <&msmgpio 25 GPIO_ACTIVE_LOW>;
